# compensation-calculator

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  render.yaml
.github/workflows/: commit-gate.yml  production-docker-gate.yml
configs/: assumptions.toml
configs/employers/: visionite.toml  volvo_cars.toml
data/raw/: skattetabell.csv
notebooks/visionite/: sandbox.ipynb
src/offers/: benefits.py  loader.py  logging_config.py  pension.py  tax.py
src/offers/companies/visionite/: __init__.py  core.py  montecarlo.py
src/web/: __init__.py  auth.py  dash_app.py  ids.py  routes.py  view_models.py
src/web/assets/: app.css
src/web/callbacks/: __init__.py  comparison.py  core.py  utils.py
src/web/layout/: __init__.py  cards.py  charts.py  controls.py  shell.py  summary.py  tables.py
src/web/services/: comparison.py
tests/: test_dash_smoke.py
