[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "analys"
version = "0.1.0"
description = "Job offer compensation comparison tools"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash>=3.1.1",
    "gunicorn>=26.0.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pandas-stubs>=3.0.0.260204",
    "plotly>=6.7.0",
    "pyarrow>=24.0.0",
    "rich>=15.0.0",
    "scipy>=1.17.1",
]

[project.scripts]
offers-dash = "web.dash_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
offers = ["py.typed"]
web = ["py.typed"]

[tool.pyright]
include = ["src", "tests"]
extraPaths = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "T201",  # Remove print statements
    "D101",  # Missing docstring in public class
    "D102",  # Missing docstring in public method
    "D103",  # Missing docstring in public function
    "B905",  # Built-in function zip used without strict
]
